style  for form

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <input type="checkbox" />
             <p>get updates and notifications about our products</p>
           </div>
-          <button class="submit">type to create a password</button>
+          <button class="btn">type to create a password</button>
         </form>
       </div>
     </main>
